--- a/src/theme/theme.config
+++ b/src/theme/theme.config
@@ -72,7 +72,7 @@
 @themesFolder : '~volto-themes';
 
 /* Path to site override folder */
-@siteFolder  : "~springtime-theme/theme";
+@siteFolder  : "@rohberg/springtime-theme/theme";
 
 /*******************************
          Import Theme
